--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,14 @@ dependencies:
   path_provider: ^2.0.2
   printing: ^5.4.3
   pdf_render: ^1.0.11
+  freezed_annotation: ^0.14.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner:
+  freezed: ^0.14.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
