--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   printing: ^5.4.3
   pdf_render: ^1.0.11
   freezed_annotation: ^0.14.2
+  computer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
